# heros-uploader

./: Cargo.toml  README.md  example.env
.github/workflows/: ci.yml
src/: catbox.rs  data.rs  env.rs  gofile.rs  handler.rs  html.rs  index.html  main.rs  uploader.rs
