[package]
name = "heros_uploader"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/NaeCqde/heros-uploader"

[package.metadata.release]
tag-name = "v{{version}}"

[[bin]]
name = "heros_uploader"
path = "src/main.rs"

[dependencies]
env_logger = "0.11"
envy = "0.4"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = [
    "brotli",
    "charset",
    "deflate",
    "gzip",
    "http2",
    "json",
    "macos-system-configuration",
    "rustls-tls",
    "zstd",
    "multipart",
] }
ntex = { version = "2.0", features = ["tokio"] }
percent-encoding = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.7"
mime = "0.3.17"
